@@ -86,7 +86,7 @@ $table->width = '90%';
 $table->head = array ();
 $table->head[0] = __('Name');
 $table->head[1] = __('Parent');
-$table->head[2] = '';
+$table->head[2] = __('Action');
 $table->style = array ();
 $table->style[0] = 'font-weight: bold';
 $table->align = array ();
