@@ -18,8 +18,9 @@ require_once ('include/config.php');
 
 check_login ();
 
-echo '<h2>'.__('Module component management').'</h2>';
-echo '<h4>'.__('Plugin component').'</h4>';
+echo "<h2>".__('Module management')." &raquo; ";
+echo __('Module component management')."</h2>";
+echo "<h3>".__('Plugin component').'</h3>';
 
 $data = array ();
 $data[0] = __('Plugin');
